# scorecard

./: .env  .gitignore  Cargo.toml  README.md  config.toml  config.yaml  makefile.toml
migrations/2019-05-15-030001_scorecard/: down.sql  up.sql
migrations/2019-05-20-073150_create_users/: up.sql
migrations/2019-05-23-043747_create_sc/: down.sql  up.sql
migrations/2019-05-23-043927_create_sc_ticket/: down.sql  up.sql
migrations/2019-05-23-044012_create_sc_log/: up.sql
migrations/2019-05-23-182305_sc_result/: down.sql  up.sql
migrations/2019-05-23-182324_sc_packages/: up.sql
migrations/2019-05-28-001614_sc_data/: up.sql
src/: auth.rs  cfg.rs  client.rs  config.rs  db.rs  errors.rs  helper.rs  main.rs  model.rs  schema.rs  token.rs
