[package]
name = "scorecard"
version = "0.1.0"
authors = ["anggacipiet<anggacipiet89@gmail.com>"]
edition = "2018"

[dependencies]
actix= "0.8.2"
actix-web = "1.0.0-rc"
actix-multipart = "0.1.1"
actix-files = "0.1.0"
diesel = { version = "1.4.2", features = ["mysql", "chrono", "serde_json", "r2d2"] }
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.14.1"
r2d2 = "0.8.4"
futures = "0.1.27"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
lazy_static = "1.3.0"
listenfd = "0.3.3"
num_cpus = "1.10.0"
env_logger = "0.6.1"
rand = "0.6"
hex = "0.3"


[dependencies.r2d2_mysql]
git = "https://github.com/outersky/r2d2-mysql"
version = "16.0.0"

[dependencies.mysql]
version = "16.0.2"
