[package]
name = "scorecard"
version = "0.1.0"
authors = ["anggacipiet<anggacipiet89@gmail.com>"]
edition = "2018"

#[profile.release]
#lto = true

[dependencies]
actix= "0.8.2"
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-multipart = "0.1.1"
actix-files = "0.1.0"
actix-service = "0.4.1"
diesel = { version = "1.4.2", features = ["mysql", "chrono", "serde_json", "r2d2"] }
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.14.1"
dotenv_codegen="0.14.1"
env_logger = "0.6.1"
r2d2 = "0.8.4"
futures = "0.1.27"
failure = "0.1.5"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = { version = "1.0.39", features = ["raw_value"] }
lazy_static = "1.3.0"
listenfd = "0.3.3"
num_cpus = "1.10.0"
log = "0.4.6"
jsonwebtoken = "6.0.1"
reqwest = "0.9.17"
derive-new = "0.5.6"
validator = "0.8.0"
validator_derive = "0.8.0"
rand = "0.6"
hex = "0.3.2"
time = "0.1.42"

[dependencies.csrf-token]
git = "https://github.com/3dom-co-jp/csrf-token"
version = "0.2.x"

[dependencies.r2d2_mysql]
git = "https://github.com/outersky/r2d2-mysql"
version = "16.0.0"

[dependencies.mysql]
version = "16.0.2"
